--- a/src/main/webapp/Application.html
+++ b/src/main/webapp/Application.html
@@ -1,14 +1,30 @@
-<!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Insta</title>
+
+    <!--                                           -->
+    <!-- Any title is fine                         -->
+    <!--                                           -->
+    <title>Wrapper HTML for App</title>
+
     <link type="text/css" rel="stylesheet" href="css/style.css">
+
+    <!--                                            -->
+    <!-- This script is required bootstrap stuff.   -->
+    <!--                                            -->
     <script type="text/javascript" language="javascript" src="Application/Application.nocache.js"></script>
 </head>
+
+<!--                                           -->
+<!-- The body can have arbitrary html, or      -->
+<!-- you can leave the body empty if you want  -->
+<!-- to create a completely dynamic ui         -->
+<!--                                           -->
 <body>
+
 <h1 id="title"></h1>
+
 <p id="header"></p>
+
 <table align="center">
     <tr>
         <td id="slot"></td>
