Не понятная магия с виджетами..

--- a/src/main/webapp/pages/listUser.html
+++ b/src/main/webapp/pages/listUser.html
@@ -26,9 +26,7 @@
     </nav>
 </div>
 <div id="content">
-    <div id="news">
-        <h1>Первая новость!</h1>
-        <p>Сайт начал создаваться!</p>
+    <div id="listUsers">
     </div>
     <table align="center">
         <tr>
