Добавление инпута для поиска

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
         <a href="index.html"><img src="css/images/logo.png" alt="Logo"></a>
     </div>
     <div id="contact"></div>
+    <div id="searchInput"></div>
 </div>
 <div id="horizontal-menu">
     <nav>
