--- a/src/main/webapp/pages/createUsers.html
+++ b/src/main/webapp/pages/createUsers.html
@@ -27,15 +27,7 @@
     </nav>
 </div>
 <div id="content">
-    <div class="flex-container">
-        <form enctype="multipart/form-data" action="/upload" method="post">
-            <label for="file" style="width:100%; display: block">
-                Choice file in upload:
-                <input type="file" id="file" name="file" accept=".txt">
-            </label>
-            <input type="submit" value="Upload"/>
-        </form>
-    </div>
+    <div id="createUser"></div>
     <table align="center">
         <tr>
             <td id="right-menu"></td>
