Finish.. Check TODO pls.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,11 +23,12 @@
             <li><a href="pages/registration.html">Регистрация</a></li>
             <li><a href="pages/listUser.html">Список пользователей</a></li>
             <li><a href="pages/createUsers.html">Создание пользователей</a></li>
+            <li><a href="pages/admin.html">Администрирование</a></li>
         </ul>
     </nav>
 </div>
 <div id="content">
-    <div id="news">
+    <div id="news" class="contents">
     </div>
     <table align="center">
         <tr>
