--- a/src/main/webapp/pages/admin.html
+++ b/src/main/webapp/pages/admin.html
@@ -28,14 +28,14 @@
     </nav>
 </div>
 <div id="content">
-    <div id="listUsers" class="contents">
+    <div id="adminTools" class="contents">
     </div>
     <table align="center">
         <tr>
             <td id="right-menu"></td>
         </tr>
     </table>
-    </div>
+</div>
 </div>
 <div id="footer">
     <p id="footer1"></p>
