--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -23,11 +23,12 @@
             <li><a href="registration.html">Регистрация</a></li>
             <li><a href="listUser.html">Список пользователей</a></li>
             <li><a href="createUsers.html">Создание пользователей</a></li>
+            <li><a href="admin.html">Администрирование</a></li>
         </ul>
     </nav>
 </div>
 <div id="content">
-    <div id="authorization">
+    <div id="authorization" class="contents">
     </div>
     <table align="center">
         <tr>
