--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,42 +3,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title id="title"></title>
-    <link type="text/css" rel="stylesheet" href="css/style.css">
-    <link type="text/css" rel="stylesheet" href="css/Application.css">
-    <script type="text/javascript" language="javascript" src="Application/Application.nocache.js"></script>
+    <!--<link type="text/css" rel="stylesheet" href="css/style.css">-->
+    <!--<link type="text/css" rel="stylesheet" href="css/Application.css">-->
 </head>
-<body>
-<div id="header">
-    <div id="logo">
-        <a href="index.html"><img src="css/images/logo.png" alt="Logo"></a>
-    </div>
-    <div id="contact"></div>
-    <div id="searchInput"></div>
-</div>
-<div id="horizontal-menu">
-    <nav>
-        <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="pages/login.html">Вход</a></li>
-            <li><a href="pages/registration.html">Регистрация</a></li>
-            <li><a href="pages/listUser.html">Список пользователей</a></li>
-            <li><a href="pages/createUsers.html">Создание пользователей</a></li>
-            <li><a href="pages/admin.html">Администрирование</a></li>
-        </ul>
-    </nav>
-</div>
-<div id="content">
-    <div id="news" class="contents">
-    </div>
-    <table align="center">
-        <tr>
-            <td id="right-menu"></td>
-        </tr>
-    </table>
-</div>
-<div id="footer">
-    <p id="footer1"></p>
-    <p id="footer2"></p>
-</div>
+<body id="body">
+<script type="text/javascript" language="javascript" src="Application/Application.nocache.js"></script>
+<div id="id-main-container" height="100%" width="100%"></div>
+</body>
 </body>
 </html>
